// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`forged symbol snapshots allWhite: template and both drawables 1`] = `
{
  "monochromeDrawable": "<vector xmlns:android="http://schemas.android.com/apk/res/android"
    android:width="24dp"
    android:height="24dp"
    android:viewportWidth="60"
    android:viewportHeight="60">
  <group android:translateX="0" android:translateY="0">
    <path android:fillColor="#000000" android:pathData="M0,0 L40,0 L40,40 L0,40 L0,0 Z M20,20 L60,20 L60,60 L20,60 L20,20 Z"/>
  </group>
</vector>
",
  "originalDrawable": "<vector xmlns:android="http://schemas.android.com/apk/res/android"
    android:width="24dp"
    android:height="24dp"
    android:viewportWidth="60"
    android:viewportHeight="60">
  <group android:translateX="0" android:translateY="0">
    <path android:fillColor="#ffffff" android:pathData="M0,0 L40,0 L40,40 L0,40 L0,0 Z M20,20 L60,20 L60,60 L20,60 L20,20 Z"/>
  </group>
</vector>
",
  "template": "<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<svg width="800" height="600" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
  <style>
    .monochrome-0 {fill:#000000}
    .multicolor-0:custom {fill:#FFFFFF}
  </style>
  <g id="Notes" font-family="'LucidaGrande', 'Lucida Grande', sans-serif" font-weight="500" font-size="13px">
    <rect x="0" y="0" width="800" height="600" fill="white"/>
    <g font-weight="500" font-size="13px">
      <text x="18px" y="176px">Small</text>
      <text x="18px" y="376px">Medium</text>
      <text x="18px" y="576px">Large</text>
    </g>
    <g font-weight="300" font-size="9px">
      <text x="250px" y="30px">Ultralight</text>
      <text x="450px" y="30px">Regular</text>
      <text x="650px" y="30px">Black</text>
      <text id="descriptive-name" fill="#505050" x="785.0" y="560.0" text-anchor="end">Generated from nano.allWhite</text>
      <text id="template-version" fill="#505050" x="785.0" y="575.0" text-anchor="end">Template v.3.0</text>
      <text fill="#505050" x="785.0" y="590.0" text-anchor="end">Generated by react-native-nano-icons</text>
    </g>
  </g>
  <g id="Guides" stroke="rgb(39,170,225)" stroke-width="0.5px">
    <path id="Capline-S" d="M18,76 l800,0" />
    <path id="H-reference" d="M85,145.755 L87.685,145.755 L113.369,79.287 L114.052002,79.287 L114.052002,76 L112.148,76 L85,145.755 Z M95.693,121.536 L130.996,121.536 L130.263,119.313 L96.474,119.313 L95.693,121.536 Z M139.14999,145.755 L141.787,145.755 L114.638,76 L113.466,76 L113.466,79.287 L139.14999,145.755 Z" stroke="none" />
    <path id="Baseline-S" d="M18,146 l800,0" />
    <path id="left-margin-Ultralight-S" d="M230,56 l0,110" />
    <path id="right-margin-Ultralight-S" d="M300,56 l0,110" />
    <path id="left-margin-Regular-S" d="M430,56 l0,110" />
    <path id="right-margin-Regular-S" d="M500,56 l0,110" />
    <path id="left-margin-Black-S" d="M630,56 l0,110" />
    <path id="right-margin-Black-S" d="M700,56 l0,110" />
    <path id="Capline-M" d="M18,276 l800,0" />
    <path id="Baseline-M" d="M18,346 l800,0" />
    <path id="Capline-L" d="M18,476 l800,0" />
    <path id="Baseline-L" d="M18,546 l800,0" />
  </g>
  <g id="Symbols">
    <g id="Ultralight-S" transform="matrix(1.167,0,0,1.167,230,76)">
      <path class="monochrome-0 multicolor-0:custom" d="M0,0 L40,0 L40,40 L0,40 L0,0 Z M20,20 L60,20 L60,60 L20,60 L20,20 Z"/>
    </g>
    <g id="Regular-S" transform="matrix(1.167,0,0,1.167,430,76)">
      <path class="monochrome-0 multicolor-0:custom" d="M0,0 L40,0 L40,40 L0,40 L0,0 Z M20,20 L60,20 L60,60 L20,60 L20,20 Z"/>
    </g>
    <g id="Black-S" transform="matrix(1.167,0,0,1.167,630,76)">
      <path class="monochrome-0 multicolor-0:custom" d="M0,0 L40,0 L40,40 L0,40 L0,0 Z M20,20 L60,20 L60,60 L20,60 L20,20 Z"/>
    </g>
  </g>
</svg>
",
}
`;

exports[`forged symbol snapshots annotatedKnockout: template and both drawables 1`] = `
{
  "monochromeDrawable": "<vector xmlns:android="http://schemas.android.com/apk/res/android"
    android:width="14.4dp"
    android:height="24dp"
    android:viewportWidth="60"
    android:viewportHeight="100">
  <group android:translateX="0" android:translateY="0">
    <path android:fillColor="#000000" android:pathData="M60 100 L0 100 L0 0 L60 0 L60 100 Z M40 70 C40 64.477 35.523 60 30 60 C24.477 60 20 64.477 20 70 C20 75.523 24.477 80 30 80 C35.523 80 40 75.523 40 70 Z"/>
  </group>
</vector>
",
  "originalDrawable": "<vector xmlns:android="http://schemas.android.com/apk/res/android"
    android:width="14.4dp"
    android:height="24dp"
    android:viewportWidth="60"
    android:viewportHeight="100">
  <group android:translateX="0" android:translateY="0">
    <path android:fillColor="#001a72" android:pathData="M60 0 L60 100 L0 100 L0 0 L60 0 Z M10 30 L30 30 L30 10 L10 10 L10 30 Z"/>
    <path android:fillColor="#ffffff" android:pathData="M10 10 L30 10 L30 30 L10 30 L10 10 Z"/>
    <path android:fillColor="#ff0000" android:pathData="M30 80 C35.523 80 40 75.523 40 70 C40 64.477 35.523 60 30 60 C24.477 60 20 64.477 20 70 C20 75.523 24.477 80 30 80 Z"/>
  </group>
</vector>
",
  "template": "<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<svg width="800" height="600" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
  <style>
    .monochrome-0 {fill:#000000}
    .multicolor-0:custom {fill:#001A72}
    .monochrome-1 {fill:#000000}
    .multicolor-1:custom {fill:#FFFFFF}
    .monochrome-2 {fill:#000000}
    .multicolor-2:custom {fill:#FF0000}
  </style>
  <g id="Notes" font-family="'LucidaGrande', 'Lucida Grande', sans-serif" font-weight="500" font-size="13px">
    <rect x="0" y="0" width="800" height="600" fill="white"/>
    <g font-weight="500" font-size="13px">
      <text x="18px" y="176px">Small</text>
      <text x="18px" y="376px">Medium</text>
      <text x="18px" y="576px">Large</text>
    </g>
    <g font-weight="300" font-size="9px">
      <text x="250px" y="30px">Ultralight</text>
      <text x="450px" y="30px">Regular</text>
      <text x="650px" y="30px">Black</text>
      <text id="descriptive-name" fill="#505050" x="785.0" y="560.0" text-anchor="end">Generated from nano.annotatedKnockout</text>
      <text id="template-version" fill="#505050" x="785.0" y="575.0" text-anchor="end">Template v.3.0</text>
      <text fill="#505050" x="785.0" y="590.0" text-anchor="end">Generated by react-native-nano-icons</text>
    </g>
  </g>
  <g id="Guides" stroke="rgb(39,170,225)" stroke-width="0.5px">
    <path id="Capline-S" d="M18,76 l800,0" />
    <path id="H-reference" d="M85,145.755 L87.685,145.755 L113.369,79.287 L114.052002,79.287 L114.052002,76 L112.148,76 L85,145.755 Z M95.693,121.536 L130.996,121.536 L130.263,119.313 L96.474,119.313 L95.693,121.536 Z M139.14999,145.755 L141.787,145.755 L114.638,76 L113.466,76 L113.466,79.287 L139.14999,145.755 Z" stroke="none" />
    <path id="Baseline-S" d="M18,146 l800,0" />
    <path id="left-margin-Ultralight-S" d="M244,56 l0,110" />
    <path id="right-margin-Ultralight-S" d="M286,56 l0,110" />
    <path id="left-margin-Regular-S" d="M444,56 l0,110" />
    <path id="right-margin-Regular-S" d="M486,56 l0,110" />
    <path id="left-margin-Black-S" d="M644,56 l0,110" />
    <path id="right-margin-Black-S" d="M686,56 l0,110" />
    <path id="Capline-M" d="M18,276 l800,0" />
    <path id="Baseline-M" d="M18,346 l800,0" />
    <path id="Capline-L" d="M18,476 l800,0" />
    <path id="Baseline-L" d="M18,546 l800,0" />
  </g>
  <g id="Symbols">
    <g id="Ultralight-S" transform="matrix(0.7,0,0,0.7,244,76)">
      <path class="monochrome-0 multicolor-0:custom" d="M60 0 L60 100 L0 100 L0 0 L60 0 Z M10 30 L30 30 L30 10 L10 10 L10 30 Z"/>
      <path class="monochrome-1 multicolor-1:custom" d="M10 10 L30 10 L30 30 L10 30 L10 10 Z"/>
      <path class="monochrome-2 multicolor-2:custom" d="M30 80 C35.523 80 40 75.523 40 70 C40 64.477 35.523 60 30 60 C24.477 60 20 64.477 20 70 C20 75.523 24.477 80 30 80 Z"/>
    </g>
    <g id="Regular-S" transform="matrix(0.7,0,0,0.7,444,76)">
      <path class="monochrome-0 multicolor-0:custom" d="M60 0 L60 100 L0 100 L0 0 L60 0 Z M10 30 L30 30 L30 10 L10 10 L10 30 Z"/>
      <path class="monochrome-1 multicolor-1:custom" d="M10 10 L30 10 L30 30 L10 30 L10 10 Z"/>
      <path class="monochrome-2 multicolor-2:custom" d="M30 80 C35.523 80 40 75.523 40 70 C40 64.477 35.523 60 30 60 C24.477 60 20 64.477 20 70 C20 75.523 24.477 80 30 80 Z"/>
    </g>
    <g id="Black-S" transform="matrix(0.7,0,0,0.7,644,76)">
      <path class="monochrome-0 multicolor-0:custom" d="M60 0 L60 100 L0 100 L0 0 L60 0 Z M10 30 L30 30 L30 10 L10 10 L10 30 Z"/>
      <path class="monochrome-1 multicolor-1:custom" d="M10 10 L30 10 L30 30 L10 30 L10 10 Z"/>
      <path class="monochrome-2 multicolor-2:custom" d="M30 80 C35.523 80 40 75.523 40 70 C40 64.477 35.523 60 30 60 C24.477 60 20 64.477 20 70 C20 75.523 24.477 80 30 80 Z"/>
    </g>
  </g>
</svg>
",
}
`;

exports[`forged symbol snapshots annotatedStroke: template and both drawables 1`] = `
{
  "monochromeDrawable": "<vector xmlns:android="http://schemas.android.com/apk/res/android"
    android:width="14.4dp"
    android:height="24dp"
    android:viewportWidth="60"
    android:viewportHeight="100">
  <group android:translateX="0" android:translateY="0">
    <path android:fillColor="#000000" android:pathData="M60 0 L60 100 L0 100 L0 0 L60 0 Z M10 52 L50 52 L50 48 L10 48 L10 52 Z"/>
  </group>
</vector>
",
  "originalDrawable": "<vector xmlns:android="http://schemas.android.com/apk/res/android"
    android:width="14.4dp"
    android:height="24dp"
    android:viewportWidth="60"
    android:viewportHeight="100">
  <group android:translateX="0" android:translateY="0">
    <path android:fillColor="#001a72" android:pathData="M0 0 L60 0 L60 100 L0 100 L0 0 Z"/>
    <path android:fillColor="#ffd700" android:pathData="M10 48 L10 52 L50 52 L50 48 Z"/>
  </group>
</vector>
",
  "template": "<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<svg width="800" height="600" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
  <style>
    .monochrome-0 {fill:#000000}
    .multicolor-0:custom {fill:#001A72}
    .monochrome-1 {fill:#000000}
    .multicolor-1:custom {fill:#FFD700}
  </style>
  <g id="Notes" font-family="'LucidaGrande', 'Lucida Grande', sans-serif" font-weight="500" font-size="13px">
    <rect x="0" y="0" width="800" height="600" fill="white"/>
    <g font-weight="500" font-size="13px">
      <text x="18px" y="176px">Small</text>
      <text x="18px" y="376px">Medium</text>
      <text x="18px" y="576px">Large</text>
    </g>
    <g font-weight="300" font-size="9px">
      <text x="250px" y="30px">Ultralight</text>
      <text x="450px" y="30px">Regular</text>
      <text x="650px" y="30px">Black</text>
      <text id="descriptive-name" fill="#505050" x="785.0" y="560.0" text-anchor="end">Generated from nano.annotatedStroke</text>
      <text id="template-version" fill="#505050" x="785.0" y="575.0" text-anchor="end">Template v.3.0</text>
      <text fill="#505050" x="785.0" y="590.0" text-anchor="end">Generated by react-native-nano-icons</text>
    </g>
  </g>
  <g id="Guides" stroke="rgb(39,170,225)" stroke-width="0.5px">
    <path id="Capline-S" d="M18,76 l800,0" />
    <path id="H-reference" d="M85,145.755 L87.685,145.755 L113.369,79.287 L114.052002,79.287 L114.052002,76 L112.148,76 L85,145.755 Z M95.693,121.536 L130.996,121.536 L130.263,119.313 L96.474,119.313 L95.693,121.536 Z M139.14999,145.755 L141.787,145.755 L114.638,76 L113.466,76 L113.466,79.287 L139.14999,145.755 Z" stroke="none" />
    <path id="Baseline-S" d="M18,146 l800,0" />
    <path id="left-margin-Ultralight-S" d="M244,56 l0,110" />
    <path id="right-margin-Ultralight-S" d="M286,56 l0,110" />
    <path id="left-margin-Regular-S" d="M444,56 l0,110" />
    <path id="right-margin-Regular-S" d="M486,56 l0,110" />
    <path id="left-margin-Black-S" d="M644,56 l0,110" />
    <path id="right-margin-Black-S" d="M686,56 l0,110" />
    <path id="Capline-M" d="M18,276 l800,0" />
    <path id="Baseline-M" d="M18,346 l800,0" />
    <path id="Capline-L" d="M18,476 l800,0" />
    <path id="Baseline-L" d="M18,546 l800,0" />
  </g>
  <g id="Symbols">
    <g id="Ultralight-S" transform="matrix(0.7,0,0,0.7,244,76)">
      <path class="monochrome-0 multicolor-0:custom" d="M0 0 L60 0 L60 100 L0 100 L0 0 Z"/>
      <path class="monochrome-1 multicolor-1:custom" d="M10 48 L10 52 L50 52 L50 48 Z"/>
    </g>
    <g id="Regular-S" transform="matrix(0.7,0,0,0.7,444,76)">
      <path class="monochrome-0 multicolor-0:custom" d="M0 0 L60 0 L60 100 L0 100 L0 0 Z"/>
      <path class="monochrome-1 multicolor-1:custom" d="M10 48 L10 52 L50 52 L50 48 Z"/>
    </g>
    <g id="Black-S" transform="matrix(0.7,0,0,0.7,644,76)">
      <path class="monochrome-0 multicolor-0:custom" d="M0 0 L60 0 L60 100 L0 100 L0 0 Z"/>
      <path class="monochrome-1 multicolor-1:custom" d="M10 48 L10 52 L50 52 L50 48 Z"/>
    </g>
  </g>
</svg>
",
}
`;

exports[`forged symbol snapshots floatingKnockout: template and both drawables 1`] = `
{
  "monochromeDrawable": "<vector xmlns:android="http://schemas.android.com/apk/res/android"
    android:width="21.6dp"
    android:height="24dp"
    android:viewportWidth="90"
    android:viewportHeight="100">
  <group android:translateX="0" android:translateY="0">
    <path android:fillColor="#000000" android:pathData="M60 0 L60 40 L90 40 L90 60 L60 60 L60 100 L0 100 L0 0 L60 0 Z M60 40 L40 40 L40 60 L60 60 L60 40 Z"/>
  </group>
</vector>
",
  "originalDrawable": "<vector xmlns:android="http://schemas.android.com/apk/res/android"
    android:width="21.6dp"
    android:height="24dp"
    android:viewportWidth="90"
    android:viewportHeight="100">
  <group android:translateX="0" android:translateY="0">
    <path android:fillColor="#001a72" android:pathData="M0 0 L60 0 L60 100 L0 100 L0 0 Z"/>
    <path android:fillColor="#ffffff" android:pathData="M40 40 L40 60 L60 60 L60 40 Z M60 60 L60 40 L90 40 L90 60 L60 60 Z"/>
  </group>
</vector>
",
  "template": "<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<svg width="800" height="600" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
  <style>
    .monochrome-0 {fill:#000000}
    .multicolor-0:custom {fill:#001A72}
    .monochrome-1 {fill:#000000}
    .multicolor-1:custom {fill:#FFFFFF}
  </style>
  <g id="Notes" font-family="'LucidaGrande', 'Lucida Grande', sans-serif" font-weight="500" font-size="13px">
    <rect x="0" y="0" width="800" height="600" fill="white"/>
    <g font-weight="500" font-size="13px">
      <text x="18px" y="176px">Small</text>
      <text x="18px" y="376px">Medium</text>
      <text x="18px" y="576px">Large</text>
    </g>
    <g font-weight="300" font-size="9px">
      <text x="250px" y="30px">Ultralight</text>
      <text x="450px" y="30px">Regular</text>
      <text x="650px" y="30px">Black</text>
      <text id="descriptive-name" fill="#505050" x="785.0" y="560.0" text-anchor="end">Generated from nano.floatingKnockout</text>
      <text id="template-version" fill="#505050" x="785.0" y="575.0" text-anchor="end">Template v.3.0</text>
      <text fill="#505050" x="785.0" y="590.0" text-anchor="end">Generated by react-native-nano-icons</text>
    </g>
  </g>
  <g id="Guides" stroke="rgb(39,170,225)" stroke-width="0.5px">
    <path id="Capline-S" d="M18,76 l800,0" />
    <path id="H-reference" d="M85,145.755 L87.685,145.755 L113.369,79.287 L114.052002,79.287 L114.052002,76 L112.148,76 L85,145.755 Z M95.693,121.536 L130.996,121.536 L130.263,119.313 L96.474,119.313 L95.693,121.536 Z M139.14999,145.755 L141.787,145.755 L114.638,76 L113.466,76 L113.466,79.287 L139.14999,145.755 Z" stroke="none" />
    <path id="Baseline-S" d="M18,146 l800,0" />
    <path id="left-margin-Ultralight-S" d="M233.5,56 l0,110" />
    <path id="right-margin-Ultralight-S" d="M296.5,56 l0,110" />
    <path id="left-margin-Regular-S" d="M433.5,56 l0,110" />
    <path id="right-margin-Regular-S" d="M496.5,56 l0,110" />
    <path id="left-margin-Black-S" d="M633.5,56 l0,110" />
    <path id="right-margin-Black-S" d="M696.5,56 l0,110" />
    <path id="Capline-M" d="M18,276 l800,0" />
    <path id="Baseline-M" d="M18,346 l800,0" />
    <path id="Capline-L" d="M18,476 l800,0" />
    <path id="Baseline-L" d="M18,546 l800,0" />
  </g>
  <g id="Symbols">
    <g id="Ultralight-S" transform="matrix(0.7,0,0,0.7,233.5,76)">
      <path class="monochrome-0 multicolor-0:custom" d="M0 0 L60 0 L60 100 L0 100 L0 0 Z"/>
      <path class="monochrome-1 multicolor-1:custom" d="M40 40 L40 60 L60 60 L60 40 Z M60 60 L60 40 L90 40 L90 60 L60 60 Z"/>
    </g>
    <g id="Regular-S" transform="matrix(0.7,0,0,0.7,433.5,76)">
      <path class="monochrome-0 multicolor-0:custom" d="M0 0 L60 0 L60 100 L0 100 L0 0 Z"/>
      <path class="monochrome-1 multicolor-1:custom" d="M40 40 L40 60 L60 60 L60 40 Z M60 60 L60 40 L90 40 L90 60 L60 60 Z"/>
    </g>
    <g id="Black-S" transform="matrix(0.7,0,0,0.7,633.5,76)">
      <path class="monochrome-0 multicolor-0:custom" d="M0 0 L60 0 L60 100 L0 100 L0 0 Z"/>
      <path class="monochrome-1 multicolor-1:custom" d="M40 40 L40 60 L60 60 L60 40 Z M60 60 L60 40 L90 40 L90 60 L60 60 Z"/>
    </g>
  </g>
</svg>
",
}
`;

exports[`forged symbol snapshots twotone: template and both drawables 1`] = `
{
  "monochromeDrawable": "<vector xmlns:android="http://schemas.android.com/apk/res/android"
    android:width="24dp"
    android:height="24dp"
    android:viewportWidth="80"
    android:viewportHeight="80">
  <group android:translateX="-10" android:translateY="-10">
    <path android:fillColor="#000000" android:pathData="M10 10L90 10L90 90L10 90L10 10Z"/>
  </group>
</vector>
",
  "originalDrawable": "<vector xmlns:android="http://schemas.android.com/apk/res/android"
    android:width="24dp"
    android:height="24dp"
    android:viewportWidth="80"
    android:viewportHeight="80">
  <group android:translateX="-10" android:translateY="-10">
    <path android:fillColor="#000000" android:fillAlpha="0.3" android:pathData="M20 20L20 80L80 80L80 20L20 20Z"/>
    <path android:fillColor="#000000" android:pathData="M90 10L10 10L10 90L90 90L90 10ZM20 80L20 20L80 20L80 80L20 80Z"/>
  </group>
</vector>
",
  "template": "<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<svg width="800" height="600" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
  <style>
    .monochrome-0 {fill:#000000}
    .multicolor-0:custom {fill:#000000;opacity:0.3}
    .monochrome-1 {fill:#000000}
    .multicolor-1:custom {fill:#000000}
  </style>
  <g id="Notes" font-family="'LucidaGrande', 'Lucida Grande', sans-serif" font-weight="500" font-size="13px">
    <rect x="0" y="0" width="800" height="600" fill="white"/>
    <g font-weight="500" font-size="13px">
      <text x="18px" y="176px">Small</text>
      <text x="18px" y="376px">Medium</text>
      <text x="18px" y="576px">Large</text>
    </g>
    <g font-weight="300" font-size="9px">
      <text x="250px" y="30px">Ultralight</text>
      <text x="450px" y="30px">Regular</text>
      <text x="650px" y="30px">Black</text>
      <text id="descriptive-name" fill="#505050" x="785.0" y="560.0" text-anchor="end">Generated from nano.twotone</text>
      <text id="template-version" fill="#505050" x="785.0" y="575.0" text-anchor="end">Template v.3.0</text>
      <text fill="#505050" x="785.0" y="590.0" text-anchor="end">Generated by react-native-nano-icons</text>
    </g>
  </g>
  <g id="Guides" stroke="rgb(39,170,225)" stroke-width="0.5px">
    <path id="Capline-S" d="M18,76 l800,0" />
    <path id="H-reference" d="M85,145.755 L87.685,145.755 L113.369,79.287 L114.052002,79.287 L114.052002,76 L112.148,76 L85,145.755 Z M95.693,121.536 L130.996,121.536 L130.263,119.313 L96.474,119.313 L95.693,121.536 Z M139.14999,145.755 L141.787,145.755 L114.638,76 L113.466,76 L113.466,79.287 L139.14999,145.755 Z" stroke="none" />
    <path id="Baseline-S" d="M18,146 l800,0" />
    <path id="left-margin-Ultralight-S" d="M230,56 l0,110" />
    <path id="right-margin-Ultralight-S" d="M300,56 l0,110" />
    <path id="left-margin-Regular-S" d="M430,56 l0,110" />
    <path id="right-margin-Regular-S" d="M500,56 l0,110" />
    <path id="left-margin-Black-S" d="M630,56 l0,110" />
    <path id="right-margin-Black-S" d="M700,56 l0,110" />
    <path id="Capline-M" d="M18,276 l800,0" />
    <path id="Baseline-M" d="M18,346 l800,0" />
    <path id="Capline-L" d="M18,476 l800,0" />
    <path id="Baseline-L" d="M18,546 l800,0" />
  </g>
  <g id="Symbols">
    <g id="Ultralight-S" transform="matrix(0.875,0,0,0.875,221.25,67.25)">
      <path class="monochrome-0 multicolor-0:custom" d="M20 20L20 80L80 80L80 20L20 20Z"/>
      <path class="monochrome-1 multicolor-1:custom" d="M90 10L10 10L10 90L90 90L90 10ZM20 80L20 20L80 20L80 80L20 80Z"/>
    </g>
    <g id="Regular-S" transform="matrix(0.875,0,0,0.875,421.25,67.25)">
      <path class="monochrome-0 multicolor-0:custom" d="M20 20L20 80L80 80L80 20L20 20Z"/>
      <path class="monochrome-1 multicolor-1:custom" d="M90 10L10 10L10 90L90 90L90 10ZM20 80L20 20L80 20L80 80L20 80Z"/>
    </g>
    <g id="Black-S" transform="matrix(0.875,0,0,0.875,621.25,67.25)">
      <path class="monochrome-0 multicolor-0:custom" d="M20 20L20 80L80 80L80 20L20 20Z"/>
      <path class="monochrome-1 multicolor-1:custom" d="M90 10L10 10L10 90L90 90L90 10ZM20 80L20 20L80 20L80 80L20 80Z"/>
    </g>
  </g>
</svg>
",
}
`;

exports[`forged symbol snapshots whiteKnockout: template and both drawables 1`] = `
{
  "monochromeDrawable": "<vector xmlns:android="http://schemas.android.com/apk/res/android"
    android:width="14.4dp"
    android:height="24dp"
    android:viewportWidth="60"
    android:viewportHeight="100">
  <group android:translateX="0" android:translateY="0">
    <path android:fillColor="#000000" android:pathData="M60 0 L60 100 L0 100 L0 0 L60 0 Z M10 90 L50 90 L50 50 L10 50 L10 90 Z M10 30 L30 30 L30 10 L10 10 L10 30 Z M40 80 L20 80 L20 60 L40 60 L40 80 Z"/>
  </group>
</vector>
",
  "originalDrawable": "<vector xmlns:android="http://schemas.android.com/apk/res/android"
    android:width="14.4dp"
    android:height="24dp"
    android:viewportWidth="60"
    android:viewportHeight="100">
  <group android:translateX="0" android:translateY="0">
    <path android:fillColor="#001a72" android:pathData="M0 0 L60 0 L60 100 L0 100 L0 0 Z"/>
    <path android:fillColor="#ffffff" android:pathData="M50 90 L50 50 L10 50 L10 90 L50 90 Z M30 10 L10 10 L10 30 L30 30 L30 10 Z M20 80 L20 60 L40 60 L40 80 L20 80 Z"/>
  </group>
</vector>
",
  "template": "<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<svg width="800" height="600" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
  <style>
    .monochrome-0 {fill:#000000}
    .multicolor-0:custom {fill:#001A72}
    .monochrome-1 {fill:#000000}
    .multicolor-1:custom {fill:#FFFFFF}
  </style>
  <g id="Notes" font-family="'LucidaGrande', 'Lucida Grande', sans-serif" font-weight="500" font-size="13px">
    <rect x="0" y="0" width="800" height="600" fill="white"/>
    <g font-weight="500" font-size="13px">
      <text x="18px" y="176px">Small</text>
      <text x="18px" y="376px">Medium</text>
      <text x="18px" y="576px">Large</text>
    </g>
    <g font-weight="300" font-size="9px">
      <text x="250px" y="30px">Ultralight</text>
      <text x="450px" y="30px">Regular</text>
      <text x="650px" y="30px">Black</text>
      <text id="descriptive-name" fill="#505050" x="785.0" y="560.0" text-anchor="end">Generated from nano.whiteKnockout</text>
      <text id="template-version" fill="#505050" x="785.0" y="575.0" text-anchor="end">Template v.3.0</text>
      <text fill="#505050" x="785.0" y="590.0" text-anchor="end">Generated by react-native-nano-icons</text>
    </g>
  </g>
  <g id="Guides" stroke="rgb(39,170,225)" stroke-width="0.5px">
    <path id="Capline-S" d="M18,76 l800,0" />
    <path id="H-reference" d="M85,145.755 L87.685,145.755 L113.369,79.287 L114.052002,79.287 L114.052002,76 L112.148,76 L85,145.755 Z M95.693,121.536 L130.996,121.536 L130.263,119.313 L96.474,119.313 L95.693,121.536 Z M139.14999,145.755 L141.787,145.755 L114.638,76 L113.466,76 L113.466,79.287 L139.14999,145.755 Z" stroke="none" />
    <path id="Baseline-S" d="M18,146 l800,0" />
    <path id="left-margin-Ultralight-S" d="M244,56 l0,110" />
    <path id="right-margin-Ultralight-S" d="M286,56 l0,110" />
    <path id="left-margin-Regular-S" d="M444,56 l0,110" />
    <path id="right-margin-Regular-S" d="M486,56 l0,110" />
    <path id="left-margin-Black-S" d="M644,56 l0,110" />
    <path id="right-margin-Black-S" d="M686,56 l0,110" />
    <path id="Capline-M" d="M18,276 l800,0" />
    <path id="Baseline-M" d="M18,346 l800,0" />
    <path id="Capline-L" d="M18,476 l800,0" />
    <path id="Baseline-L" d="M18,546 l800,0" />
  </g>
  <g id="Symbols">
    <g id="Ultralight-S" transform="matrix(0.7,0,0,0.7,244,76)">
      <path class="monochrome-0 multicolor-0:custom" d="M0 0 L60 0 L60 100 L0 100 L0 0 Z"/>
      <path class="monochrome-1 multicolor-1:custom" d="M50 90 L50 50 L10 50 L10 90 L50 90 Z M30 10 L10 10 L10 30 L30 30 L30 10 Z M20 80 L20 60 L40 60 L40 80 L20 80 Z"/>
    </g>
    <g id="Regular-S" transform="matrix(0.7,0,0,0.7,444,76)">
      <path class="monochrome-0 multicolor-0:custom" d="M0 0 L60 0 L60 100 L0 100 L0 0 Z"/>
      <path class="monochrome-1 multicolor-1:custom" d="M50 90 L50 50 L10 50 L10 90 L50 90 Z M30 10 L10 10 L10 30 L30 30 L30 10 Z M20 80 L20 60 L40 60 L40 80 L20 80 Z"/>
    </g>
    <g id="Black-S" transform="matrix(0.7,0,0,0.7,644,76)">
      <path class="monochrome-0 multicolor-0:custom" d="M0 0 L60 0 L60 100 L0 100 L0 0 Z"/>
      <path class="monochrome-1 multicolor-1:custom" d="M50 90 L50 50 L10 50 L10 90 L50 90 Z M30 10 L10 10 L10 30 L30 30 L30 10 Z M20 80 L20 60 L40 60 L40 80 L20 80 Z"/>
    </g>
  </g>
</svg>
",
}
`;
